# fastapi-base-no-auth

./: .cursorrules  .gitignore  README.md  mkdocs.yml  project.code-workspace  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  htmx.py  items.py
app/core/: config.py  exceptions.py  logging.py  templates.py
app/db/: base.py
app/middleware/: correlation.py  error_handler.py
app/models/: item.py
app/repositories/: __init__.py
app/schemas/: __init__.py  response.py
docs/: index.md
docs/development/guides/: adding_authentication.md  getting_started.md  git_pull_strategies.md  git_ssh_configuration.md  htmx_templating.md  version_control.md
static/: .gitkeep
templates/: base.html  index.html
templates/htmx/partials/: item_detail.html  item_list.html
tests/: conftest.py  test_health.py  test_items.py
